--- a/homework/mongo/donut-shop/donut_mongoose/package.json
+++ b/homework/mongo/donut-shop/donut_mongoose/package.json
@@ -10,11 +10,12 @@
   "author": "Christine Yi for WDIR-Matey",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
+    "body-parser": "^1.18.2",
+    "express": "^4.15.5",
     "hbs": "^4.0.1",
-    "morgan": "^1.6.1",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.3"
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.4.3",
+    "morgan": "^1.6.1"
   }
 }
